src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_References__c</fullName>
        <description>This field is used to roll-up the Account References linked to the Account.</description>
        <label>Account References</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C_External_Family_Key__c</fullName>
        <description>This field is used to store the Bisnode Family Key on an Account record.</description>
        <label>External Family Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_External_Person_Key__c</fullName>
        <description>This field is used to store the Bisnode Person Key on an Account record.</description>
        <externalId>true</externalId>
        <label>External Person Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Language__c</fullName>
        <description>This field is used to capture the Language of an Account record.</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Salesforce_Email__c</fullName>
        <description>This field is used to store the email coming from the case if it was not previously identified on the Account.</description>
        <label>Salesforce Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>C_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to flag customers that are considered as VIP.</description>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>PC_SALUTATION</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>C_Language__c</columns>
        <columns>C_External_Family_Key__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>